[package]
name = "twenty-twenty"
description = "Visual regression testing of H264 frames and images."
repository = "https://github.com/kittycad/twenty-twenty"
version = "0.6.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.74", features = ["backtrace"] }
ffmpeg-next = { version = "6.0.0", default-features = false, features = ["codec", "format", "software-scaling"] }
image = "0.24.6"
image-compare = "0.3.0"
uuid = { version = "1.4.0", features = ["v4"] }
