[package]
name = "twenty-twenty"
description = "Visual regression testing of H264 frames and images."
repository = "https://github.com/kittycad/twenty-twenty"
version = "0.8.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
ffmpeg-next = { version = "7.0.2", default-features = false, features = ["codec", "format", "software-scaling"], optional = true }
image = { version = "0.25.1", default-features = false, features = ["png"] }
image-compare = "0.4.1"
uuid = { version = "1.4.0", features = ["v4"] }

[features]
default = []
h264 = ["dep:ffmpeg-next"]
